Fix: delete extra <li> to fix nav spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,7 @@ h6 {
 }
 
 #main-nav-links-right .main-nav-links {
-    margin-left: 25px;
+    padding-left: 25px;
 }
 
 /* Hero Section */
